Fixed userModel to immutable workflow (for state manegment). added collapse to header + fixed state changing bugs

--- a/okr_front/src/components/header/header.css
+++ b/okr_front/src/components/header/header.css
@@ -2,10 +2,6 @@
     height: 38px;
 }
 
-.exit:hover{
-    background-color: var(--color-on-primary);
-}
-
 .btn-custom{
     background-color: var(--color-on-primary);
 }
